project (smoke_basin)
set(APP "smoke_basin") 
cmake_minimum_required (VERSION 2.8...3.19)
if (WIN32)
    set(CMAKE_C_FLAGS "-D__WIN32__")
    set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -D_SILENCE_EXPERIMENTAL_FILESYSTEM_DEPRECATION_WARNING -DGL-")
else()
    set(CMAKE_C_FLAGS "-std=c99 -D_POSIX_C_SOURCE=200809L -D_GNU_SOURCE -fPIC -g")
endif()
add_executable(${APP} smoke_basin.c)
